--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
         </p>
         <button type="button">Read More</button>
       </section>
+      <section>
+        <p>This is what we do</p>
+        <h2>Business Cases</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, sapiente!</p>
+        <ul>
+          <li><img src="./img/img1.jpg" alt="command"></li>
+          <li><img src="./img/img2.jpg" alt="note"></li>
+          <li><img src="./img/img3.jpg" alt="meet"></li>
+          <li><img src="./img/img4.jpg" alt="discussion"></li>
+          <li><img src="./img/img5.jpg" alt="laptop"></li>
+          <li><img src="./img/img6.jpg" alt="building"></li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
