--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
           <li><img src="./img/img6.jpg" alt="building"></li>
         </ul>
       </section>
+      <section>
+        <p>April 16 2020</p>
+        <h2>Blog Post One</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, ipsum dignissimos quae laudantium asperiores nam
+        aliquid impedit harum illum dolore explicabo ab dolores itaque rerum temporibus doloribus iste maiores deleniti?</p>
+        <button type="button">Read Our Blog</button>
+        <img src="./img/img7.jpg" alt="work">
+      </section>
     </main>
   </body>
 </html>
