--- a/index.html
+++ b/index.html
@@ -40,23 +40,55 @@
       <section>
         <p>This is what we do</p>
         <h2>Business Cases</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, sapiente!</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
+          sapiente!
+        </p>
         <ul>
-          <li><img src="./img/img1.jpg" alt="command"></li>
-          <li><img src="./img/img2.jpg" alt="note"></li>
-          <li><img src="./img/img3.jpg" alt="meet"></li>
-          <li><img src="./img/img4.jpg" alt="discussion"></li>
-          <li><img src="./img/img5.jpg" alt="laptop"></li>
-          <li><img src="./img/img6.jpg" alt="building"></li>
+          <li><img src="./img/img1.jpg" alt="command" /></li>
+          <li><img src="./img/img2.jpg" alt="note" /></li>
+          <li><img src="./img/img3.jpg" alt="meet" /></li>
+          <li><img src="./img/img4.jpg" alt="discussion" /></li>
+          <li><img src="./img/img5.jpg" alt="laptop" /></li>
+          <li><img src="./img/img6.jpg" alt="building" /></li>
         </ul>
       </section>
       <section>
         <p>April 16 2020</p>
         <h2>Blog Post One</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, ipsum dignissimos quae laudantium asperiores nam
-        aliquid impedit harum illum dolore explicabo ab dolores itaque rerum temporibus doloribus iste maiores deleniti?</p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate,
+          ipsum dignissimos quae laudantium asperiores nam aliquid impedit harum
+          illum dolore explicabo ab dolores itaque rerum temporibus doloribus
+          iste maiores deleniti?
+        </p>
         <button type="button">Read Our Blog</button>
-        <img src="./img/img7.jpg" alt="work">
+        <img src="./img/img7.jpg" alt="work" />
+      </section>
+      <section>
+        <p>Who we are</p>
+        <h2>Our Professional Team</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
+          sapiente!
+        </p>
+        <ul>
+          <li>
+            <img src="./img/Rectangle1.jpg" alt="man in suit" />
+            <h3>John Doe</h3>
+            <p>President</p>
+          </li>
+          <li>
+            <img src="./img/Rectangle2.jpg" alt="women" />
+            <h3>Jane Doe</h3>
+            <p>Vice President</p>
+          </li>
+          <li>
+            <img src="./img/Rectangle3.jpg" alt="smile man" />
+            <h3>Steve Smith</h3>
+            <p>Marketing Head</p>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
