--- a/index.html
+++ b/index.html
@@ -90,6 +90,18 @@
           </li>
         </ul>
       </section>
+      <section>
+        <img src="./img/man.jpg" alt="man work">
+        <h2>Request Callback</h2>
+        <form>
+          <input type="text" placeholder="Enter your name">
+          <input type="email" placeholder="Enter email*">
+          <button type="submit">Send</button>
+        </form>
+      </section>
     </main>
+    <footer>
+      <p>Copyright &copy; 2021 - FinanceLedger</p>
+    </footer>
   </body>
 </html>
