add lorem for test

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -26,7 +29,10 @@
         <button type="button">>Read More</button>
       </section>
       <section>
-        <img src="./img/Rectangle.jpg" alt="our team" />
+        <img
+          src="./img/Rectangle.jpg"
+          alt="our team"
+        />
         <p>What you are looking for</p>
         <h2>We provide bespoke solutions</h2>
         <p>
@@ -45,12 +51,42 @@
           sapiente!
         </p>
         <ul>
-          <li><img src="./img/img1.jpg" alt="command" /></li>
-          <li><img src="./img/img2.jpg" alt="note" /></li>
-          <li><img src="./img/img3.jpg" alt="meet" /></li>
-          <li><img src="./img/img4.jpg" alt="discussion" /></li>
-          <li><img src="./img/img5.jpg" alt="laptop" /></li>
-          <li><img src="./img/img6.jpg" alt="building" /></li>
+          <li>
+            <img
+              src="./img/img1.jpg"
+              alt="command"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/img2.jpg"
+              alt="note"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/img3.jpg"
+              alt="meet"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/img4.jpg"
+              alt="discussion"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/img5.jpg"
+              alt="laptop"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/img6.jpg"
+              alt="building"
+            />
+          </li>
         </ul>
       </section>
       <section>
@@ -63,7 +99,10 @@
           iste maiores deleniti?
         </p>
         <button type="button">Read Our Blog</button>
-        <img src="./img/img7.jpg" alt="work" />
+        <img
+          src="./img/img7.jpg"
+          alt="work"
+        />
       </section>
       <section>
         <p>Who we are</p>
@@ -74,34 +113,58 @@
         </p>
         <ul>
           <li>
-            <img src="./img/Rectangle1.jpg" alt="man in suit" />
+            <img
+              src="./img/Rectangle1.jpg"
+              alt="man in suit"
+            />
             <h3>John Doe</h3>
             <p>President</p>
           </li>
           <li>
-            <img src="./img/Rectangle2.jpg" alt="women" />
+            <img
+              src="./img/Rectangle2.jpg"
+              alt="women"
+            />
             <h3>Jane Doe</h3>
             <p>Vice President</p>
           </li>
           <li>
-            <img src="./img/Rectangle3.jpg" alt="smile man" />
+            <img
+              src="./img/Rectangle3.jpg"
+              alt="smile man"
+            />
             <h3>Steve Smith</h3>
             <p>Marketing Head</p>
           </li>
         </ul>
       </section>
       <section>
-        <img src="./img/man.jpg" alt="man work">
+        <img
+          src="./img/man.jpg"
+          alt="man work"
+        />
         <h2>Request Callback</h2>
         <form>
-          <input type="text" placeholder="Enter your name">
-          <input type="email" placeholder="Enter email*">
+          <input
+            type="text"
+            placeholder="Enter your name"
+          />
+          <input
+            type="email"
+            placeholder="Enter email*"
+          />
           <button type="submit">Send</button>
         </form>
       </section>
     </main>
     <footer>
       <p>Copyright &copy; 2021 - FinanceLedger</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae iure aut
+        ut quibusdam amet labore? Repudiandae asperiores perferendis sint.
+        Magnam odio ratione fuga dolorem voluptas, quod vel praesentium.
+        Provident, quae.
+      </p>
     </footer>
   </body>
 </html>
