add stysel about section

--- a/index.html
+++ b/index.html
@@ -55,17 +55,21 @@
           <button class="hero-btn" type="button">>Read More</button>
         </div>
       </section>
-      <section>
-        <img src="./img/Rectangle.jpg" alt="our team" />
-        <p>What you are looking for</p>
-        <h2>We provide bespoke solutions</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate,
-          ipsum dignissimos quae laudantium asperiores nam aliquid impedit harum
-          illum dolore explicabo ab dolores itaque rerum temporibus doloribus
-          iste maiores deleniti?
-        </p>
-        <button type="button">Read More</button>
+      <section class="about">
+        <div class="container">
+          <img src="./img/Rectangle.jpg" alt="our team" />
+          <div class="about-wrap">
+            <p class="about-subtitle">What you are looking for</p>
+            <h2 class="about-title">We provide bespoke solutions</h2>
+            <p class="about-text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Voluptate, ipsum dignissimos quae laudantium asperiores nam
+              aliquid impedit harum illum dolore explicabo ab dolores itaque
+              rerum temporibus doloribus iste maiores deleniti?
+            </p>
+            <button class="about-btn" type="button">Read More</button>
+          </div>
+        </div>
       </section>
       <section>
         <p>This is what we do</p>
