--- a/index.html
+++ b/index.html
@@ -71,21 +71,23 @@
           </div>
         </div>
       </section>
-      <section>
-        <p>This is what we do</p>
-        <h2>Business Cases</h2>
-        <p>
+      <section class="cases">
+        <div class="container">
+        <p class="cases-subtitle">This is what we do</p>
+        <h2 class="cases-title">Business Cases</h2>
+        <p class="cases-text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
           sapiente!
         </p>
-        <ul>
-          <li><img src="./img/img1.jpg" alt="command" /></li>
-          <li><img src="./img/img2.jpg" alt="note" /></li>
-          <li><img src="./img/img3.jpg" alt="meet" /></li>
-          <li><img src="./img/img4.jpg" alt="discussion" /></li>
-          <li><img src="./img/img5.jpg" alt="laptop" /></li>
-          <li><img src="./img/img6.jpg" alt="building" /></li>
+        <ul class="cases-list">
+          <li class="cases-item"><img src="./img/img1.jpg" alt="command" /></li>
+          <li class="cases-item"><img src="./img/img2.jpg" alt="note" /></li>
+          <li class="cases-item"><img src="./img/img3.jpg" alt="meet" /></li>
+          <li class="cases-item"><img src="./img/img4.jpg" alt="discussion" /></li>
+          <li class="cases-item"><img src="./img/img5.jpg" alt="laptop" /></li>
+          <li class="cases-item"><img src="./img/img6.jpg" alt="building" /></li>
         </ul>
+        </div>
       </section>
       <section>
         <p>April 16 2020</p>
