add section blog

--- a/index.html
+++ b/index.html
@@ -73,33 +73,45 @@
       </section>
       <section class="cases">
         <div class="container">
-        <p class="cases-subtitle">This is what we do</p>
-        <h2 class="cases-title">Business Cases</h2>
-        <p class="cases-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
-          sapiente!
-        </p>
-        <ul class="cases-list">
-          <li class="cases-item"><img src="./img/img1.jpg" alt="command" /></li>
-          <li class="cases-item"><img src="./img/img2.jpg" alt="note" /></li>
-          <li class="cases-item"><img src="./img/img3.jpg" alt="meet" /></li>
-          <li class="cases-item"><img src="./img/img4.jpg" alt="discussion" /></li>
-          <li class="cases-item"><img src="./img/img5.jpg" alt="laptop" /></li>
-          <li class="cases-item"><img src="./img/img6.jpg" alt="building" /></li>
-        </ul>
+          <p class="cases-subtitle">This is what we do</p>
+          <h2 class="cases-title">Business Cases</h2>
+          <p class="cases-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
+            sapiente!
+          </p>
+          <ul class="cases-list">
+            <li class="cases-item">
+              <img src="./img/img1.jpg" alt="command" />
+            </li>
+            <li class="cases-item"><img src="./img/img2.jpg" alt="note" /></li>
+            <li class="cases-item"><img src="./img/img3.jpg" alt="meet" /></li>
+            <li class="cases-item">
+              <img src="./img/img4.jpg" alt="discussion" />
+            </li>
+            <li class="cases-item">
+              <img src="./img/img5.jpg" alt="laptop" />
+            </li>
+            <li class="cases-item">
+              <img src="./img/img6.jpg" alt="building" />
+            </li>
+          </ul>
         </div>
       </section>
-      <section>
-        <p>April 16 2020</p>
-        <h2>Blog Post One</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate,
-          ipsum dignissimos quae laudantium asperiores nam aliquid impedit harum
-          illum dolore explicabo ab dolores itaque rerum temporibus doloribus
-          iste maiores deleniti?
-        </p>
-        <button type="button">Read Our Blog</button>
-        <img src="./img/img7.jpg" alt="work" />
+      <section class="blog">
+        <div class="container">
+          <div class="blog-wrap">
+            <p class="blog-subtitle">April 16 2020</p>
+            <h2 class="blog-title">Blog Post One</h2>
+            <p class="blog-text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Voluptate, ipsum dignissimos quae laudantium asperiores nam
+              aliquid impedit harum illum dolore explicabo ab dolores itaque
+              rerum temporibus doloribus iste maiores deleniti?
+            </p>
+            <button class="blog-btn" type="button">Read Our Blog</button>
+          </div>
+          <img src="./img/img7.jpg" alt="work" />
+        </div>
       </section>
       <section>
         <p>Who we are</p>
