--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
     </main>
     <footer>
       <p>Copyright &copy; 2021 - FinanceLedger</p>
+      <p>Copyright &copy; 2021 - FinanceLedger</p>
+      <p>Copyright &copy; 2021 - FinanceLedger</p>
     </footer>
   </body>
 </html>
